// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`webpack configs > sets up the default config with default settings 1`] = `
{
  "context": "<ROOT>/project/app",
  "devtool": "source-map",
  "entry": {
    "index": [
      "<ROOT>/project/app/index.js",
    ],
  },
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn",
  },
  "mode": "development",
  "module": {
    "rules": [
      {
        "test": {},
        "use": [
          {
            "loader": "imports-loader",
            "options": {
              "imports": [
                "single process/browser process",
              ],
              "type": "commonjs",
            },
          },
        ],
      },
      {
        "include": [
          "<ROOT>/project/app",
          {},
        ],
        "test": {},
        "use": [
          {
            "loader": "esbuild-loader",
            "options": {
              "loader": "tsx",
              "target": "es2015",
            },
          },
        ],
      },
      {
        "resolve": {
          "fullySpecified": false,
        },
        "test": {},
      },
      {
        "test": {},
        "use": [
          "style-loader",
          {
            "loader": "css-loader",
            "options": {
              "importLoaders": 1,
              "sourceMap": true,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "postcssOptions": {
                "plugins": [
                  {
                    "postcssPlugin": "postcss-focus",
                  },
                  {
                    "postcssPlugin": "postcss-flexbugs-fixes",
                  },
                  {
                    "plugins": [
                      {
                        "AtRule": {},
                        "postcssPlugin": "postcss-media-minmax",
                      },
                      {
                        "postcssPlugin": "postcss-initial",
                      },
                      {
                        "postcssPlugin": "postcss-page-break",
                      },
                      {
                        "postcssPlugin": "postcss-font-variant",
                      },
                      {
                        "postcssPlugin": "postcss-gap-properties",
                      },
                      {
                        "postcssPlugin": "postcss-unset-value",
                      },
                      {
                        "postcssPlugin": "postcss-custom-properties",
                      },
                      {
                        "postcssPlugin": "postcss-progressive-custom-properties",
                      },
                      {
                        "options": {
                          "flexbox": "no-2009",
                        },
                        "postcssPlugin": "autoprefixer",
                      },
                      {
                        "postcssPlugin": "postcss-preset-env",
                      },
                    ],
                    "postcssPlugin": "postcss-preset-env",
                  },
                  {
                    "postcssPlugin": "postcss-reporter",
                  },
                ],
              },
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "test": {},
        "use": [
          "style-loader",
          {
            "loader": "css-loader",
            "options": {
              "sourceMap": true,
            },
          },
          {
            "loader": "postcss-loader",
            "options": {
              "postcssOptions": {
                "plugins": [
                  {
                    "postcssPlugin": "postcss-focus",
                  },
                  {
                    "postcssPlugin": "postcss-flexbugs-fixes",
                  },
                  {
                    "plugins": [
                      {
                        "AtRule": {},
                        "postcssPlugin": "postcss-media-minmax",
                      },
                      {
                        "postcssPlugin": "postcss-initial",
                      },
                      {
                        "postcssPlugin": "postcss-page-break",
                      },
                      {
                        "postcssPlugin": "postcss-font-variant",
                      },
                      {
                        "postcssPlugin": "postcss-gap-properties",
                      },
                      {
                        "postcssPlugin": "postcss-unset-value",
                      },
                      {
                        "postcssPlugin": "postcss-custom-properties",
                      },
                      {
                        "postcssPlugin": "postcss-progressive-custom-properties",
                      },
                      {
                        "options": {
                          "flexbox": "no-2009",
                        },
                        "postcssPlugin": "autoprefixer",
                      },
                      {
                        "postcssPlugin": "postcss-preset-env",
                      },
                    ],
                    "postcssPlugin": "postcss-preset-env",
                  },
                  {
                    "postcssPlugin": "postcss-reporter",
                  },
                ],
              },
              "sourceMap": true,
            },
          },
          {
            "loader": "sass-loader",
            "options": {
              "sourceMap": true,
            },
          },
        ],
      },
      {
        "generator": {
          "filename": "fonts/[name].[ext]",
        },
        "test": {},
        "type": "asset/resource",
      },
      {
        "generator": {
          "filename": "images/[name].[ext]",
        },
        "test": {},
        "type": "asset/resource",
      },
    ],
  },
  "output": {
    "chunkFilename": "[name].chunk.js",
    "filename": "[name].js",
    "path": "<ROOT>/build",
  },
  "plugins": [
    {
      "definitions": {
        "__DEV__": false,
        "__PROD__": false,
        "__STAGING__": false,
        "__TEST__": true,
        "process.env.NODE_ENV": ""test"",
      },
    },
    {
      "options": {
        "banner": "APP_VERSION="N/A";",
        "entryOnly": true,
        "raw": true,
        "test": {},
      },
    },
    {
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z",
      },
    },
    {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": "../../packages/workflow/public/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {},
        "minify": "auto",
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "title": "Availity",
        "xhtml": false,
      },
      "userOptions": {
        "favicon": "../../packages/workflow/public/favicon.ico",
        "template": "../../packages/workflow/public/index.html",
        "title": "Availity",
      },
      "version": 5,
    },
    {
      "options": {
        "contextRegExp": {},
        "resourceRegExp": {},
      },
    },
    {
      "fsOperations": 0,
      "logger": {},
      "options": {},
      "pathCache": {},
      "primed": false,
    },
    {
      "options": {
        "emitError": false,
        "showHelp": true,
        "strict": true,
        "verbose": true,
      },
    },
    {
      "key": "ESLintWebpackPlugin",
      "options": {
        "cache": true,
        "cacheLocation": "<ROOT>/node_modules/.cache/.eslintcache",
        "emitError": true,
        "emitWarning": true,
        "extensions": [
          "js",
          "jsx",
          "ts",
          "tsx",
          "mjs",
        ],
        "failOnError": true,
        "resourceQueryExclude": [],
      },
    },
    {
      "options": {
        "exclude": {},
        "include": {},
        "overlay": {
          "entry": "<ROOT>/node_modules/@pmmmwh/react-refresh-webpack-plugin/client/ErrorOverlayEntry.js",
          "module": "<ROOT>/node_modules/@pmmmwh/react-refresh-webpack-plugin/overlay/index.js",
          "sockIntegration": "wds",
        },
      },
    },
    {
      "isFirstBuild": true,
      "lastBuildSucceeded": false,
      "options": {
        "contentImage": "<ROOT>/packages/workflow/public/availity.png",
        "excludeWarnings": true,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss",
    ],
    "fallback": {
      "path": "<ROOT>/node_modules/path-browserify/index.js",
    },
    "modules": [
      "<ROOT>/project/app",
      "node_modules",
      "<ROOT>/node_modules",
      "<ROOT>/packages/workflow/node_modules",
    ],
    "plugins": [
      {
        "absoluteBaseUrl": "<ROOT>/example",
        "baseUrl": "./example/",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "log": {},
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
    "symlinks": true,
  },
  "resolveLoader": {
    "modules": [
      "<ROOT>/node_modules",
      "<ROOT>/packages/workflow/node_modules",
    ],
    "symlinks": true,
  },
  "stats": "minimal",
  "target": "browserslist: last 1 chrome version, last 1 firefox version, last 1 safari version",
}
`;

exports[`webpack configs > sets up the production config with default settings 1`] = `
{
  "context": "<ROOT>/project/app",
  "devtool": "source-map",
  "entry": {
    "index": [
      "<ROOT>/project/app/index.js",
    ],
  },
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "test": {},
            "use": [
              {
                "loader": "imports-loader",
                "options": {
                  "imports": [
                    "single process/browser process",
                  ],
                  "type": "commonjs",
                },
              },
            ],
          },
          {
            "include": [
              "<ROOT>/project/app",
              {},
            ],
            "test": {},
            "use": [
              {
                "loader": "esbuild-loader",
                "options": {
                  "loader": "tsx",
                  "target": "es2015",
                },
              },
            ],
          },
          {
            "resolve": {
              "fullySpecified": false,
            },
            "test": {},
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              {
                "loader": "css-loader",
                "options": {
                  "importLoaders": 1,
                  "sourceMap": true,
                },
              },
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {},
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                          },
                          {
                            "options": {
                              "flexbox": "no-2009",
                            },
                            "postcssPlugin": "autoprefixer",
                          },
                          {
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              "css-loader",
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {},
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                          },
                          {
                            "options": {
                              "flexbox": "no-2009",
                            },
                            "postcssPlugin": "autoprefixer",
                          },
                          {
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "sass-loader",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "generator": {
              "filename": "fonts/[name][ext]",
            },
            "test": {},
            "type": "asset/resource",
          },
          {
            "generator": {
              "filename": "images/[name].[ext]",
            },
            "test": {},
            "type": "asset/resource",
          },
          {
            "exclude": [
              {},
              {},
              {},
            ],
            "generator": {
              "filename": "static/media/[contenthash:8][ext]",
            },
            "type": "asset/resource",
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": {
      "cacheGroups": {
        "default": {
          "minChunks": 2,
          "priority": -20,
          "reuseExistingChunk": true,
        },
        "defaultVendors": {
          "chunks": "all",
          "idHint": "defaultVendors",
          "priority": -10,
          "test": {},
        },
        "lodash": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 1,
          "test": {},
        },
        "moment": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 2,
          "test": {},
        },
        "react": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 10,
          "test": {},
        },
        "styles": {
          "chunks": "all",
          "enforce": true,
          "idHint": "styles",
          "test": {},
        },
      },
    },
  },
  "output": {
    "chunkFilename": "[name].chunk.js",
    "filename": "[name].js",
    "path": "<ROOT>/build",
  },
  "plugins": [
    {
      "definitions": {
        "__DEV__": false,
        "__PROD__": false,
        "__STAGING__": false,
        "__TEST__": true,
        "process.env.NODE_ENV": ""test"",
      },
    },
    {
      "options": {
        "banner": "APP_VERSION="N/A";",
        "entryOnly": true,
        "raw": true,
        "test": {},
      },
    },
    {
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z",
      },
    },
    {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": "../../packages/workflow/public/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {},
        "minify": "auto",
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "title": "Availity",
        "xhtml": false,
      },
      "userOptions": {
        "favicon": "../../packages/workflow/public/favicon.ico",
        "template": "../../packages/workflow/public/index.html",
        "title": "Availity",
      },
      "version": 5,
    },
    {
      "options": {
        "contextRegExp": {},
        "resourceRegExp": {},
      },
    },
    {
      "fsOperations": 0,
      "logger": {},
      "options": {},
      "pathCache": {},
      "primed": false,
    },
    {
      "_sortedModulesCache": {},
      "options": {
        "chunkFilename": "css/[name]-[contenthash:8].chunk.css",
        "filename": "css/[name]-[contenthash:8].chunk.css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "linkType": "text/css",
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss",
    ],
    "fallback": {
      "path": "<ROOT>/node_modules/path-browserify/index.js",
    },
    "modules": [
      "<ROOT>/project/app",
      "node_modules",
      "<ROOT>/node_modules",
      "<ROOT>/packages/workflow/node_modules",
    ],
    "plugins": [
      {
        "absoluteBaseUrl": "<ROOT>/example",
        "baseUrl": "./example/",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "log": {},
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
    "symlinks": true,
  },
  "resolveLoader": {
    "modules": [
      "<ROOT>/node_modules",
      "<ROOT>/packages/workflow/node_modules",
    ],
    "symlinks": true,
  },
  "target": "browserslist: defaults",
}
`;

exports[`webpack configs > sets up the profile config with default settings 1`] = `
{
  "context": "<ROOT>/project/app",
  "devtool": "source-map",
  "entry": {
    "index": [
      "<ROOT>/project/app/index.js",
    ],
  },
  "experiments": {},
  "infrastructureLogging": {
    "level": "warn",
  },
  "mode": "production",
  "module": {
    "rules": [
      {
        "oneOf": [
          {
            "test": {},
            "use": [
              {
                "loader": "imports-loader",
                "options": {
                  "imports": [
                    "single process/browser process",
                  ],
                  "type": "commonjs",
                },
              },
            ],
          },
          {
            "include": [
              "<ROOT>/project/app",
              {},
            ],
            "test": {},
            "use": [
              {
                "loader": "esbuild-loader",
                "options": {
                  "loader": "tsx",
                  "target": "es2015",
                },
              },
            ],
          },
          {
            "resolve": {
              "fullySpecified": false,
            },
            "test": {},
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              {
                "loader": "css-loader",
                "options": {
                  "importLoaders": 1,
                  "sourceMap": true,
                },
              },
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {},
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                          },
                          {
                            "options": {
                              "flexbox": "no-2009",
                            },
                            "postcssPlugin": "autoprefixer",
                          },
                          {
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "test": {},
            "use": [
              {
                "loader": "<ROOT>/node_modules/mini-css-extract-plugin/dist/loader.js",
                "options": {
                  "publicPath": "auto",
                },
              },
              "css-loader",
              {
                "loader": "postcss-loader",
                "options": {
                  "postcssOptions": {
                    "plugins": [
                      {
                        "postcssPlugin": "postcss-focus",
                      },
                      {
                        "postcssPlugin": "postcss-flexbugs-fixes",
                      },
                      {
                        "plugins": [
                          {
                            "AtRule": {},
                            "postcssPlugin": "postcss-media-minmax",
                          },
                          {
                            "postcssPlugin": "postcss-initial",
                          },
                          {
                            "postcssPlugin": "postcss-page-break",
                          },
                          {
                            "postcssPlugin": "postcss-font-variant",
                          },
                          {
                            "postcssPlugin": "postcss-gap-properties",
                          },
                          {
                            "postcssPlugin": "postcss-unset-value",
                          },
                          {
                            "postcssPlugin": "postcss-custom-properties",
                          },
                          {
                            "postcssPlugin": "postcss-progressive-custom-properties",
                          },
                          {
                            "options": {
                              "flexbox": "no-2009",
                            },
                            "postcssPlugin": "autoprefixer",
                          },
                          {
                            "postcssPlugin": "postcss-preset-env",
                          },
                        ],
                        "postcssPlugin": "postcss-preset-env",
                      },
                      {
                        "postcssPlugin": "postcss-reporter",
                      },
                    ],
                  },
                  "sourceMap": true,
                },
              },
              {
                "loader": "sass-loader",
                "options": {
                  "sourceMap": true,
                },
              },
            ],
          },
          {
            "generator": {
              "filename": "fonts/[name][ext]",
            },
            "test": {},
            "type": "asset/resource",
          },
          {
            "generator": {
              "filename": "images/[name].[ext]",
            },
            "test": {},
            "type": "asset/resource",
          },
          {
            "exclude": [
              {},
              {},
              {},
            ],
            "generator": {
              "filename": "static/media/[contenthash:8][ext]",
            },
            "type": "asset/resource",
          },
        ],
      },
    ],
  },
  "optimization": {
    "minimizer": [],
    "moduleIds": "deterministic",
    "runtimeChunk": "single",
    "splitChunks": {
      "cacheGroups": {
        "default": {
          "minChunks": 2,
          "priority": -20,
          "reuseExistingChunk": true,
        },
        "defaultVendors": {
          "chunks": "all",
          "idHint": "defaultVendors",
          "priority": -10,
          "test": {},
        },
        "lodash": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 1,
          "test": {},
        },
        "moment": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 2,
          "test": {},
        },
        "react": {
          "chunks": "all",
          "idHint": "vendors",
          "priority": 10,
          "test": {},
        },
        "styles": {
          "chunks": "all",
          "enforce": true,
          "idHint": "styles",
          "test": {},
        },
      },
    },
  },
  "output": {
    "chunkFilename": "[name].chunk.js",
    "filename": "[name].js",
    "path": "<ROOT>/build",
  },
  "plugins": [
    {
      "definitions": {
        "__DEV__": false,
        "__PROD__": false,
        "__STAGING__": false,
        "__TEST__": true,
        "process.env.NODE_ENV": ""test"",
      },
    },
    {
      "options": {
        "banner": "APP_VERSION="N/A";",
        "entryOnly": true,
        "raw": true,
        "test": {},
      },
    },
    {
      "options": {
        "banner": "vN/A - 2023-03-28T16:07:07.909Z",
      },
    },
    {
      "options": {
        "base": false,
        "cache": true,
        "chunks": "all",
        "chunksSortMode": "auto",
        "compile": true,
        "excludeChunks": [],
        "favicon": "../../packages/workflow/public/favicon.ico",
        "filename": "index.html",
        "hash": false,
        "inject": "head",
        "meta": {},
        "minify": "auto",
        "publicPath": "auto",
        "scriptLoading": "defer",
        "showErrors": true,
        "template": "../../packages/workflow/public/index.html",
        "templateContent": false,
        "title": "Availity",
        "xhtml": false,
      },
      "userOptions": {
        "favicon": "../../packages/workflow/public/favicon.ico",
        "template": "../../packages/workflow/public/index.html",
        "title": "Availity",
      },
      "version": 5,
    },
    {
      "options": {
        "contextRegExp": {},
        "resourceRegExp": {},
      },
    },
    {
      "fsOperations": 0,
      "logger": {},
      "options": {},
      "pathCache": {},
      "primed": false,
    },
    {
      "_sortedModulesCache": {},
      "options": {
        "chunkFilename": "css/[name]-[contenthash:8].chunk.css",
        "filename": "css/[name]-[contenthash:8].chunk.css",
        "ignoreOrder": false,
        "runtime": true,
      },
      "runtimeOptions": {
        "linkType": "text/css",
      },
    },
    {
      "logger": {
        "activeLevels": {},
      },
      "opts": {
        "analyzerHost": "127.0.0.1",
        "analyzerMode": "static",
        "analyzerPort": 8888,
        "defaultSizes": "parsed",
        "excludeAssets": null,
        "generateStatsFile": false,
        "logLevel": "info",
        "openAnalyzer": true,
        "reportFilename": "profile.html",
        "startAnalyzer": true,
        "statsFilename": "stats.json",
        "statsOptions": null,
      },
      "server": null,
    },
    {
      "options": {
        "emitError": false,
        "showHelp": true,
        "strict": true,
        "verbose": false,
      },
    },
  ],
  "resolve": {
    "extensions": [
      ".js",
      ".jsx",
      ".ts",
      ".tsx",
      ".json",
      ".css",
      ".scss",
    ],
    "fallback": {
      "path": "<ROOT>/node_modules/path-browserify/index.js",
    },
    "modules": [
      "<ROOT>/project/app",
      "node_modules",
      "<ROOT>/node_modules",
      "<ROOT>/packages/workflow/node_modules",
    ],
    "plugins": [
      {
        "absoluteBaseUrl": "<ROOT>/example",
        "baseUrl": "./example/",
        "extensions": [
          ".js",
          ".jsx",
          ".ts",
          ".tsx",
        ],
        "log": {},
        "referenceMatchMap": {},
        "source": "described-resolve",
        "target": "resolve",
      },
    ],
    "symlinks": true,
  },
  "resolveLoader": {
    "modules": [
      "<ROOT>/node_modules",
      "<ROOT>/packages/workflow/node_modules",
    ],
    "symlinks": true,
  },
  "target": "browserslist: defaults",
}
`;
